// Lensora ERD for dbdiagram.io
// Source: backend/src/main/resources/db/migration + backend/src/main/java/com/camerashop/entity

Project Lensora {
  database_type: 'PostgreSQL'
  Note: 'Camera-equipment marketplace for product sales, rentals, carts, favorites, payments, notifications, and reviews.'
}

Enum user_role {
  USER
  ADMIN
}

Enum category_entity_type {
  PRODUCT
  ASSET
}

Enum asset_status {
  AVAILABLE
  RENTED
  MAINTENANCE
}

Enum order_status {
  PENDING
  SHIPPED
  DELIVERED
  CANCELLED
}

Enum order_payment_method {
  COD
  VNPAY
  MOMO
}

Enum rental_status {
  PENDING
  ACTIVE
  COMPLETED
  CANCELLED
}

Enum rental_payment_method {
  MOMO
}

Enum payment_transaction_status {
  PENDING
  SUCCESS
  FAILED
  REFUNDED
}

Enum cart_item_type {
  PRODUCT
  ASSET
}

Enum favorite_type {
  PRODUCT
  ASSET
}

Enum saved_payment_method_type {
  MOMO
  BANK
}

Enum notification_type {
  ORDER_UPDATE
  RENTAL_REMINDER
  RENTAL_OVERDUE
  SYSTEM
  PROMOTION
  PAYMENT_SUCCESS
  PAYMENT_FAILED
  SHIPPING_UPDATE
}

Enum notification_reference_type {
  ORDER
  RENTAL
}

Enum review_entity_type {
  PRODUCT
  ASSET
}

Table users {
  user_id varchar(255) [pk]
  user_name varchar(255) [not null, unique]
  email varchar(255) [not null, unique]
  password varchar(255)
  provider varchar(255) [note: 'google, apple, local']
  provider_id varchar(255) [unique]
  avatar_url varchar(255)
  email_verified boolean [not null, default: false]
  role user_role [not null, default: 'USER']
  trust_score integer [not null, default: 100]
  created_at timestamp
  updated_at timestamp
}

Table categories {
  category_id varchar(255) [pk]
  category_name varchar(255) [not null]
  type category_entity_type [not null]
}

Table products {
  product_id varchar(255) [pk]
  category_id varchar(255) [not null]
  user_id varchar(255) [not null]
  product_name varchar(255) [not null]
  brand varchar(255) [not null]
  description varchar(2000) [not null]
  price bigint [not null]
  stock_quantity integer [not null]
  created_at timestamp [not null]
}

Table assets {
  asset_id varchar(255) [pk]
  category_id varchar(255) [not null]
  user_id varchar(255) [not null]
  model_name varchar(255) [not null]
  brand varchar(255) [not null]
  daily_rate bigint [not null]
  status asset_status [not null, default: 'AVAILABLE']
  serial_number varchar(255) [not null, unique]
  created_at timestamp [not null]
}

Table product_images {
  image_id varchar(255) [pk]
  product_id varchar(255) [not null]
  url varchar(255) [not null]
  is_primary boolean [not null, default: false]
}

Table asset_images {
  image_id varchar(255) [pk]
  asset_id varchar(255) [not null]
  url varchar(255) [not null]
  is_primary boolean [not null, default: false]
}

Table orders {
  order_id varchar(255) [pk]
  user_id varchar(255) [not null]
  order_date timestamp [not null]
  total_amount bigint [not null]
  shipping_address varchar(500) [not null]
  status order_status [not null, default: 'PENDING']
  payment_method order_payment_method [not null, default: 'COD']
  payment_status varchar(255) [default: 'PENDING']
  ghn_order_id varchar(255) [note: 'GHN order code for shipment tracking']
  shipping_fee bigint
  shipped_date timestamp
  delivered_date timestamp
  cancelled_date timestamp
  cancel_reason varchar(255)
}

Table order_items {
  order_item_id varchar(255) [pk]
  order_id varchar(255) [not null]
  product_id varchar(255) [not null]
  quantity integer [not null]
  price_at_purchase bigint [not null]
}

Table rentals {
  rental_id varchar(255) [pk]
  user_id varchar(255) [not null]
  asset_id varchar(255) [not null]
  start_date date [not null]
  end_date date [not null]
  return_date date
  deposit_fee bigint [not null]
  total_rent_fee bigint [not null]
  penalty_fee bigint [default: 0]
  status rental_status [not null, default: 'PENDING']
  shipping_address varchar(255)
  payment_method rental_payment_method
  shipping_fee bigint [default: 0]
  created_at timestamp [note: 'Added by V3 for rental hold expiry']
  payment_status varchar(255) [default: 'PENDING']
}

Table payment_transactions {
  transaction_id varchar(255) [pk]
  transaction_ref varchar(255) [not null, unique]
  order_code varchar(255) [not null]
  amount double [not null]
  status payment_transaction_status [not null]
  payment_method varchar(255) [not null]
  order_id varchar(255)
  rental_id varchar(255)
  bank_code varchar(255)
  bank_tran_no varchar(255)
  card_type varchar(255)
  response_code varchar(255)
  response_message varchar(255)
  transaction_date timestamp [not null]
  created_at timestamp [not null]
}

Table cart_items {
  cart_item_id varchar(255) [pk]
  user_id varchar(255) [not null]
  product_id varchar(255)
  asset_id varchar(255)
  quantity integer [not null, default: 1]
  type cart_item_type [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, created_at) [name: 'idx_cart_items_user_created_at']
  }
}

Table favorites {
  favorite_id varchar(255) [pk]
  user_id varchar(255) [not null]
  product_id varchar(255)
  asset_id varchar(255)
  type favorite_type [not null]

  Indexes {
    (user_id, product_id) [unique, name: 'uk_favorites_user_product']
    (user_id, asset_id) [unique, name: 'uk_favorites_user_asset']
  }
}

Table notifications {
  notification_id varchar(36) [pk]
  user_id varchar(255) [not null]
  title varchar(255) [not null]
  message text [not null]
  type notification_type [not null]
  reference_id varchar(36) [note: 'Polymorphic reference to orders.order_id or rentals.rental_id']
  reference_type notification_reference_type
  is_read boolean [not null, default: false]
  is_action_required boolean [not null, default: false]
  action_url varchar(500)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  read_at timestamp
  expires_at timestamp

  Indexes {
    user_id [name: 'idx_user_id']
    (user_id, is_read) [name: 'idx_user_unread']
    (reference_id, reference_type) [name: 'idx_reference']
    created_at [name: 'idx_created_at']
  }
}

Table email_verification_tokens {
  id varchar(255) [pk]
  token varchar(255) [not null, unique]
  user_id varchar(255) [not null, unique]
  expiry_date timestamp [not null]
  used boolean [not null, default: false]
  created_at timestamp [not null]
}

Table password_reset_tokens {
  id varchar(255) [pk]
  token varchar(255) [not null, unique]
  user_id varchar(255) [not null]
  expiry_date timestamp [not null]
  used boolean [not null, default: false]
  created_at timestamp [not null]
}

Table payment_methods {
  payment_method_id varchar(255) [pk]
  user_id varchar(255) [not null]
  type saved_payment_method_type [not null]
  label varchar(255) [not null]
  account_holder varchar(255)
  masked_account varchar(255)
  is_default boolean [not null, default: false]
  created_at timestamp [not null]

  Indexes {
    user_id [name: 'idx_payment_methods_user']
  }
}

Table user_addresses {
  address_id varchar(255) [pk]
  user_id varchar(255) [not null]
  recipient_name varchar(255) [not null]
  recipient_phone varchar(255) [not null]
  province_id varchar(255)
  province_name varchar(255)
  district_id varchar(255) [note: 'GHN district_id for shipping-fee calc']
  district_name varchar(255)
  ward_code varchar(255) [note: 'GHN ward_code for shipping-fee calc']
  ward_name varchar(255)
  street varchar(255)
  note varchar(255)
  postal_code varchar(255) [note: 'Added by V9, optional']
  is_default boolean [not null, default: false]
  created_at timestamp
  updated_at timestamp

  Indexes {
    user_id [name: 'idx_user_addresses_user']
  }
}

Table reviews {
  review_id bigint [pk, increment]
  user_id varchar(255)
  entity_id bigint [note: 'Polymorphic product/asset id in legacy entity; no DB FK in migration']
  rating integer
  comment varchar(255)
  type review_entity_type
}

Table images {
  image_id bigint [pk, increment]
  entity_id bigint [note: 'Polymorphic product/asset id in legacy entity; no DB FK in migration']
  url varchar(1000) [not null]
  is_primary boolean [not null]
  type review_entity_type
}

Table carts {
  cart_id bigint [pk, increment]
  user_id bigint [note: 'Legacy cart table; no FK in migration']
  product_id bigint [note: 'Legacy cart table; no FK in migration']
  quantity integer
}

Ref fk_products_category: products.category_id > categories.category_id
Ref fk_products_user: products.user_id > users.user_id

Ref fk_assets_category: assets.category_id > categories.category_id
Ref fk_assets_user: assets.user_id > users.user_id

Ref fk_product_images_product: product_images.product_id > products.product_id
Ref fk_asset_images_asset: asset_images.asset_id > assets.asset_id

Ref fk_orders_user: orders.user_id > users.user_id
Ref fk_order_items_order: order_items.order_id > orders.order_id
Ref fk_order_items_product: order_items.product_id > products.product_id

Ref fk_rentals_user: rentals.user_id > users.user_id
Ref fk_rentals_asset: rentals.asset_id > assets.asset_id

Ref fk_payment_transactions_order: payment_transactions.order_id > orders.order_id
Ref fk_payment_transactions_rental: payment_transactions.rental_id > rentals.rental_id

Ref fk_cart_items_user: cart_items.user_id > users.user_id
Ref fk_cart_items_product: cart_items.product_id > products.product_id
Ref fk_cart_items_asset: cart_items.asset_id > assets.asset_id

Ref fk_favorites_user: favorites.user_id > users.user_id
Ref fk_favorites_product: favorites.product_id > products.product_id
Ref fk_favorites_asset: favorites.asset_id > assets.asset_id

Ref fk_notifications_user: notifications.user_id > users.user_id

Ref fk_email_verification_tokens_user: email_verification_tokens.user_id > users.user_id
Ref fk_password_reset_tokens_user: password_reset_tokens.user_id > users.user_id
Ref fk_payment_methods_user: payment_methods.user_id > users.user_id
Ref fk_user_addresses_user: user_addresses.user_id > users.user_id
Ref fk_reviews_user: reviews.user_id > users.user_id
